--- a/templates/job.html
+++ b/templates/job.html
@@ -7,7 +7,7 @@
     
 {% block content %}
 <head>
-    <link rel="stylesheet" href="/christopher.github.io/static/css/project.css">
+    <link rel="stylesheet" href="/static/css/project.css">
 </head>
 <body>
     <div class="summary">
