--- a/templates/pages/Yale.html
+++ b/templates/pages/Yale.html
@@ -8,7 +8,7 @@
 </title>
     
     <!-- Favicon -->
-    <link rel="icon" href="/christopher.github.io/static/images/favicon.jpg">
+    <link rel="icon" href="/static/images/favicon.jpg">
 
 
     <!-- jQuery -->
@@ -23,19 +23,19 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="/christopher.github.io/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/layout.css">
 
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    <script src="/christopher.github.io/static/js/layout.js"></script>
+    <script src="/static/js/layout.js"></script>
     
 </head>
 <body class="dkgray-base">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid nav-container">
             <!-- Navbar Brand -->
-            <a class="navbar-brand" href="#"><img src="/christopher.github.io/static/images/favicon.jpg" alt="logo" width="50" height="40"></a>
+            <a class="navbar-brand" href="#"><img src="/static/images/favicon.jpg" alt="logo" width="50" height="40"></a>
             <!-- Navbar Toggle (for mobile view) -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,17 +44,17 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html#home">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html#home"> Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#about">About Me</a>
+                        <a class="nav-link" href="index.html#about"> About Me </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#exp">Professional Experience</a>
+                        <a class="nav-link" href="index.html#exp"> Professional Experience </a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="index.html#swe" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            SWE Work
+                            SWE Work 
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="index.html#frontend" >Frontend Work</a>
@@ -68,7 +68,7 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="index.html#swe" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            ML Work
+                            ML Work 
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="index.html#nlp">Natural Language Processing</a>
@@ -81,16 +81,16 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#cyber">Cybersecurity</a>
+                        <a class="nav-link" href="index.html#cyber"> Cyber Security Work </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#finstats">Financial Technology/Stats</a>
+                        <a class="nav-link" href="index.html#finstats"> Financial Technology/Stats Work </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#certs">Certifications</a>
+                        <a class="nav-link" href="index.html#certs"> Certifications </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">Contact Me</a>
+                    <li class="nav-item me-auto">
+                        <a class="nav-link" href="index.html#contact"> Contact Me </a>
                     </li>
                 </ul>
             </div>
@@ -104,14 +104,14 @@
         <div class="main-container">
             
 <head>
-    <link rel="stylesheet" href="/christopher.github.io/static/css/project.css">
+    <link rel="stylesheet" href="/static/css/project.css">
 </head>
 <body>
     <div class="summary">
         <h1>Yale University NLP Lab Undergraduate Research Assistant</h1>
         <h3>Company: Yale</h3>
         <h4>Duration: May 2023 - August 2023</h4>
-        <p>My time at the Yale NLP lab introduced me to the wonderful world of Natural Language Processing. <br><br> Here, I was able to collaborate with experienced researchers in the NLP field, allowing me to learn how to properly read, interpret and structure scientific research papers in Computer Science. This experience also bolstered my presentations skills, as I was able to summarize and present prominent papers on the frontier of NLP research to the lab each week. <br><br> My main task as a research assistant was to create a companion website for the lab's L2CEval Paper, which studied the performance of various Large Language Models on different lexical and semantic tasks. The website demo I created served as the predecessor to the current L2CEval website. This project taught me how to use Python's Streamlit library for web development and required me to analyze training and testing data from LLMs using HuggingFace.</p>
+        <p>My time at the Yale NLP lab introduced me to the wonderful world of Natural Language Processing. <br><br> Here, I was able to collaborate with experienced researchers in the NLP field, allowing me to learn how to properly read, interpret and structure scientific research papers in Computer Science. This experience also bolstered my presentation skills, as I was able to summarize and present prominent papers on the frontier of NLP research to the lab each week. <br><br> My main task as a research assistant was to create a companion website for the lab's L2CEval Paper, which studied the performance of various Large Language Models on different lexical and semantic tasks. The website demo I created served as the predecessor to the current L2CEval website. This project taught me how to use Python's Streamlit library for web development and required me to analyze training and testing data from LLMs using HuggingFace.</p>
         <p>Tags: 
             
             <span class="tag">
