--- a/templates/pages/BERT.html
+++ b/templates/pages/BERT.html
@@ -8,7 +8,7 @@
 </title>
     
     <!-- Favicon -->
-    <link rel="icon" href="/christopher.github.io/static/images/favicon.jpg">
+    <link rel="icon" href="/static/images/favicon.jpg">
 
 
     <!-- jQuery -->
@@ -23,19 +23,19 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="/christopher.github.io/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/layout.css">
 
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    <script src="/christopher.github.io/static/js/layout.js"></script>
+    <script src="/static/js/layout.js"></script>
     
 </head>
 <body class="dkgray-base">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid nav-container">
             <!-- Navbar Brand -->
-            <a class="navbar-brand" href="#"><img src="/christopher.github.io/static/images/favicon.jpg" alt="logo" width="50" height="40"></a>
+            <a class="navbar-brand" href="#"><img src="/static/images/favicon.jpg" alt="logo" width="50" height="40"></a>
             <!-- Navbar Toggle (for mobile view) -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,17 +44,17 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html#home">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html#home"> Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#about">About Me</a>
+                        <a class="nav-link" href="index.html#about"> About Me </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#exp">Professional Experience</a>
+                        <a class="nav-link" href="index.html#exp"> Professional Experience </a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="index.html#swe" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            SWE Work
+                            SWE Work 
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="index.html#frontend" >Frontend Work</a>
@@ -68,7 +68,7 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="index.html#swe" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            ML Work
+                            ML Work 
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="index.html#nlp">Natural Language Processing</a>
@@ -81,16 +81,16 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#cyber">Cybersecurity</a>
+                        <a class="nav-link" href="index.html#cyber"> Cyber Security Work </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#finstats">Financial Technology/Stats</a>
+                        <a class="nav-link" href="index.html#finstats"> Financial Technology/Stats Work </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#certs">Certifications</a>
+                        <a class="nav-link" href="index.html#certs"> Certifications </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">Contact Me</a>
+                    <li class="nav-item me-auto">
+                        <a class="nav-link" href="index.html#contact"> Contact Me </a>
                     </li>
                 </ul>
             </div>
@@ -104,13 +104,13 @@
         <div class="main-container">
             
 <head>
-    <link rel="stylesheet" href="/christopher.github.io/static/css/project.css">
+    <link rel="stylesheet" href="/static/css/project.css">
 </head>
 <body>
     <div class="summary">
         <h1>BERT Lexical Substitution</h1>
         <h3>Completion: November 2023</h3>
-        <p><b>Task:</b> <br> In this task, the goal is to find lexical substitutes for individual target words in context. For example, given the following sentence: 'Anyway, my pants are getting tighter every day.' the goal is to propose an alternative word for tight, such that the meaning of the sentence is preserved. Such a substitute could be 'constricting', 'small' or 'uncomfortable.' <br> To complete this task the pretrained model, DistilBERT from HuggingFace, is used to find substitutes. <br><br> Five different approaches are taken to find lexical substitutes: WordNet Frequency Baseline, Lesk Algorithm, Word2Vec Embeddings, BERT Pretrained Embeddings, Query with Chatgpt API. <br><br><b> WordNet Frequency Baseline </b><br> Given a context, use WordNet to find the possible synynomy with the highest total occurrence frequency in the same context in WordNet. <br><b> Lesk Algorithm </b> Word Sense Disambiguation (WSD) is performed using the Lesk Algorithm to select a synset for the target word where the definition of the synset and the context of the target word are similar. The algorithm then returns the most frequent synonym from that synset as a substitute.  <br><b> Word2Vec Embeddings </b> Find possible synonyms for the target word using WordNet. Return the synonym that is most similar to the target word according to the Word2Vec embedding. <br><b> BERT Pretrained Embedding </b> Using Keras, feed in an embedded sentenced with the target word masked. BERT will returned the candidate for the target word given the context. <br><b> Query Chatgpt API </b> Feed the sentence into a Chatgpt prompt using Chatgpt's API. Chatgpt will give the best substitute. Results are improved using few-shot prompting.</p>
+        <p><b>Task:</b> <br> In this task, the goal is to find lexical substitutes for individual target words in context. For example, given the following sentence: 'Anyway, my pants are getting tighter every day.' the goal is to propose an alternative word for tighter, such that the meaning of the sentence is preserved. Such a substitute could be 'constricting', 'small' or 'uncomfortable.' <br> To complete this task the pretrained model, DistilBERT from HuggingFace, is used to find substitutes. <br><br> Five different approaches are taken to find lexical substitutes: WordNet Frequency Baseline, Lesk Algorithm, Word2Vec Embeddings, BERT Pretrained Embeddings, Query with Chatgpt API. <br><br><b> WordNet Frequency Baseline </b><br> Given a context, use WordNet to find the possible synynomy with the highest total occurrence frequency in the same context in WordNet. <br><b> Lesk Algorithm </b> Word Sense Disambiguation (WSD) is performed using the Lesk Algorithm to select a synset for the target word where the definition of the synset and the context of the target word are similar. The algorithm then returns the most frequent synonym from that synset as a substitute.  <br><b> Word2Vec Embeddings </b> Find possible synonyms for the target word using WordNet. Return the synonym that is most similar to the target word according to the Word2Vec embedding. <br><b> BERT Pretrained Embedding </b> Using Keras, feed in an embedded sentenced with the target word masked. BERT will returned the candidate for the target word given the context. <br><b> Query Chatgpt API </b> Feed the sentence into a Chatgpt prompt using Chatgpt's API. Chatgpt will give the best substitute. Results are improved using few-shot prompting.</p>
         <p>Tags: 
             
             <span class="tag">
