--- a/templates/pages/Yale_website.html
+++ b/templates/pages/Yale_website.html
@@ -8,7 +8,7 @@
 </title>
     
     <!-- Favicon -->
-    <link rel="icon" href="/christopher.github.io/static/images/favicon.jpg">
+    <link rel="icon" href="/static/images/favicon.jpg">
 
 
     <!-- jQuery -->
@@ -23,19 +23,19 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="/christopher.github.io/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/layout.css">
 
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    <script src="/christopher.github.io/static/js/layout.js"></script>
+    <script src="/static/js/layout.js"></script>
     
 </head>
 <body class="dkgray-base">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid nav-container">
             <!-- Navbar Brand -->
-            <a class="navbar-brand" href="#"><img src="/christopher.github.io/static/images/favicon.jpg" alt="logo" width="50" height="40"></a>
+            <a class="navbar-brand" href="#"><img src="/static/images/favicon.jpg" alt="logo" width="50" height="40"></a>
             <!-- Navbar Toggle (for mobile view) -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,17 +44,17 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html#home">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html#home"> Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#about">About Me</a>
+                        <a class="nav-link" href="index.html#about"> About Me </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#exp">Professional Experience</a>
+                        <a class="nav-link" href="index.html#exp"> Professional Experience </a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="index.html#swe" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            SWE Work
+                            SWE Work 
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="index.html#frontend" >Frontend Work</a>
@@ -68,7 +68,7 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="index.html#swe" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            ML Work
+                            ML Work 
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="index.html#nlp">Natural Language Processing</a>
@@ -81,16 +81,16 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#cyber">Cybersecurity</a>
+                        <a class="nav-link" href="index.html#cyber"> Cyber Security Work </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#finstats">Financial Technology/Stats</a>
+                        <a class="nav-link" href="index.html#finstats"> Financial Technology/Stats Work </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#certs">Certifications</a>
+                        <a class="nav-link" href="index.html#certs"> Certifications </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">Contact Me</a>
+                    <li class="nav-item me-auto">
+                        <a class="nav-link" href="index.html#contact"> Contact Me </a>
                     </li>
                 </ul>
             </div>
@@ -104,13 +104,13 @@
         <div class="main-container">
             
 <head>
-    <link rel="stylesheet" href="/christopher.github.io/static/css/project.css">
+    <link rel="stylesheet" href="/static/css/project.css">
 </head>
 <body>
     <div class="summary">
         <h1>LC2Eval Web Demo</h1>
         <h3>Completion: August 2023</h3>
-        <p>In the summer of 2023, I served as an undergraduate research assistant to Yale's NLP Lab under PI Professor Arman Cohan. <br><br>As an academic collaborator, I was introduced to the field of Natural Language Processing, learning about techniques such as tokenization, few-shot/zero-shot learning and prompting. Additionally, I created presentations on important NLP research papers to build my understanding and familiarity with academic research papers. <br><br> The LC2Eval research project evaluated 54 existing models from 13 organizations on 7 different tasks. The web demo I created with a lab partner clearly visualized the results obtained from this study, using the Python Streamlit libray to implement web design techniques such as pagination, tabling, sorting and searching. <br><br> The Lab's full paper can be found <a href='https://arxiv.org/abs/2309.17446' target='_blank'> here</a>.</p>
+        <p>In the summer of 2023, I served as an undergraduate research assistant to Yale's NLP Lab under PI Professor Arman Cohan. <br><br>As an academic collaborator, I was introduced to the field of Natural Language Processing, learning about techniques such as tokenization, few-shot/zero-shot learning and prompting. Additionally, I created presentations on important NLP research papers to build my understanding and familiarity with academic research papers. <br><br> The LC2Eval research project evaluated 54 existing models from 13 organizations on 7 different tasks. The web demo I created with a lab partner clearly visualized the results obtained from this study, using the Python Streamlit library to implement web design techniques such as pagination, tabling, sorting and searching. <br><br> The Lab's full paper can be found <a href='https://arxiv.org/abs/2309.17446' target='_blank'> here</a>.</p>
         <p>Tags: 
             
             <span class="tag">
