--- a/templates/pages/cnn.html
+++ b/templates/pages/cnn.html
@@ -8,7 +8,7 @@
 </title>
     
     <!-- Favicon -->
-    <link rel="icon" href="/christopher.github.io/static/images/favicon.jpg">
+    <link rel="icon" href="/static/images/favicon.jpg">
 
 
     <!-- jQuery -->
@@ -23,19 +23,19 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="/christopher.github.io/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/layout.css">
 
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    <script src="/christopher.github.io/static/js/layout.js"></script>
+    <script src="/static/js/layout.js"></script>
     
 </head>
 <body class="dkgray-base">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid nav-container">
             <!-- Navbar Brand -->
-            <a class="navbar-brand" href="#"><img src="/christopher.github.io/static/images/favicon.jpg" alt="logo" width="50" height="40"></a>
+            <a class="navbar-brand" href="#"><img src="/static/images/favicon.jpg" alt="logo" width="50" height="40"></a>
             <!-- Navbar Toggle (for mobile view) -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,17 +44,17 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html#home">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html#home"> Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#about">About Me</a>
+                        <a class="nav-link" href="index.html#about"> About Me </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#exp">Professional Experience</a>
+                        <a class="nav-link" href="index.html#exp"> Professional Experience </a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="index.html#swe" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            SWE Work
+                            SWE Work 
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="index.html#frontend" >Frontend Work</a>
@@ -68,7 +68,7 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="index.html#swe" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            ML Work
+                            ML Work 
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="index.html#nlp">Natural Language Processing</a>
@@ -81,16 +81,16 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#cyber">Cybersecurity</a>
+                        <a class="nav-link" href="index.html#cyber"> Cyber Security Work </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#finstats">Financial Technology/Stats</a>
+                        <a class="nav-link" href="index.html#finstats"> Financial Technology/Stats Work </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#certs">Certifications</a>
+                        <a class="nav-link" href="index.html#certs"> Certifications </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">Contact Me</a>
+                    <li class="nav-item me-auto">
+                        <a class="nav-link" href="index.html#contact"> Contact Me </a>
                     </li>
                 </ul>
             </div>
@@ -104,13 +104,13 @@
         <div class="main-container">
             
 <head>
-    <link rel="stylesheet" href="/christopher.github.io/static/css/project.css">
+    <link rel="stylesheet" href="/static/css/project.css">
 </head>
 <body>
     <div class="summary">
         <h1>Identifying Robot Collisions using Convolution Neural Network</h1>
         <h3>Completion: May 2024</h3>
-        <p>A Convolutional Neural Network allows for images to be processed in 3 dimensions (depth, height, width) instead of vectorized forms. <br><br><b> Dataset: </b><br> The pretrained ResNet-18 model was used as a CNN. This model was fed 1000 images of the robot in various collision states along with their collision status (image, label) pairs.<br><br> <b> Training: </b><br> The model's classifer is trained on the 900 sample images generated earlier to update the weights and finetune it for this task. <br><br><b> Evaluation: </b><br> Since the model is now trained, the remaining 100 images are used to validate the accuracy of the model. The Learning Rate and Number of Epochs hyperparameters are modified during training maximize the accuracry of the model.</p>
+        <p>A Convolutional Neural Network allows for images to be processed in 3 dimensions (depth, height, width) instead of vectorized forms. <br><br><b> Dataset: </b><br> The pretrained ResNet-18 model was used as a CNN. This model was fed 1000 images of the robot in various collision states along with their collision status (image, label) pairs.<br><br> <b> Training: </b><br> The model's classifier is trained on the 900 sample images generated earlier to update the weights and finetune it for this task. <br><br><b> Evaluation: </b><br> Since the model is now trained, the remaining 100 images are used to validate the accuracy of the model. The Learning Rate and Number of Epochs hyperparameters are modified during training maximize the accuracry of the model.</p>
         <p>Tags: 
             
             <span class="tag">
